Fix JavaFX library import